// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variables-help Renders \`variables-help\` with all parameters 1`] = `
<div
  class="modal-wrapper"
  close=""
>
  <div
    class="title"
  >
    <span>
      Variables
    </span>
  </div>
  <div
    class="text"
  >
    <!---->
    <div
      class="v-treeview theme--light"
    >
      <div
        aria-expanded="true"
        class="v-treeview-node v-treeview-node--leaf"
      >
        <div
          class="v-treeview-node__root"
        >
          <div
            class="v-treeview-node__level"
          />
          <div
            class="v-treeview-node__content"
          >
            <div
              class="v-treeview-node__prepend"
            />
            <div
              class="v-treeview-node__label"
            >
              <div>
          test
                <span
                  class="pl-1"
                >
                  :
                  <div
                    class="pl-1 d-inline-block text--secondary text-body-1 font-italic"
                  >
              Empty object
                  </div>
                </span>
              </div>
            </div>
            <div
              class="v-treeview-node__append"
            >
              <div
                bottom=""
                class="v-menu"
                left=""
                offset-y=""
              >
                <button
                  class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      save_alt
                    </i>
                  </span>
                </button>
                <span
                  class="v-tooltip v-tooltip--left"
                >
                  <!---->
                </span>
                <div
                  class="v-list v-sheet theme--light v-list--dense"
                  role="list"
                >
                  <div
                    class="v-list-item v-list-item--link theme--light"
                    role="listitem"
                    tabindex="0"
                  >
                    <div
                      class="v-avatar v-list-item__avatar"
                      style="height: 40px; min-width: 40px; width: 40px;"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                        style="font-size: 24px; height: 24px; width: 24px;"
                      >
                        <svg
                          class="v-icon__component theme--light"
                          fill="currentColor"
                          style="font-size: 24px; height: 24px; width: 24px;"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="v-list-item__title"
                    >
                      Export to JSON
                    </div>
                  </div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-treeview-node__children"
        />
      </div>
      <div
        aria-expanded="true"
        class="v-treeview-node"
      >
        <div
          class="v-treeview-node__root"
        >
          <button
            class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
            type="button"
          >
            arrow_drop_down
          </button>
          <div
            class="v-treeview-node__content"
          >
            <div
              class="v-treeview-node__prepend"
            />
            <div
              class="v-treeview-node__label"
            >
              <div>
          test2
                <!---->
              </div>
            </div>
            <div
              class="v-treeview-node__append"
            >
              <div
                bottom=""
                class="v-menu"
                left=""
                offset-y=""
              >
                <button
                  class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      save_alt
                    </i>
                  </span>
                </button>
                <span
                  class="v-tooltip v-tooltip--left"
                >
                  <!---->
                </span>
                <div
                  class="v-list v-sheet theme--light v-list--dense"
                  role="list"
                >
                  <div
                    class="v-list-item v-list-item--link theme--light"
                    role="listitem"
                    tabindex="0"
                  >
                    <div
                      class="v-avatar v-list-item__avatar"
                      style="height: 40px; min-width: 40px; width: 40px;"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                        style="font-size: 24px; height: 24px; width: 24px;"
                      >
                        <svg
                          class="v-icon__component theme--light"
                          fill="currentColor"
                          style="font-size: 24px; height: 24px; width: 24px;"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="v-list-item__title"
                    >
                      Export to JSON
                    </div>
                  </div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-treeview-node__children"
        >
          <div
            aria-expanded="true"
            class="v-treeview-node v-treeview-node--leaf"
          >
            <div
              class="v-treeview-node__root"
            >
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__prepend"
                />
                <div
                  class="v-treeview-node__label"
                >
                  <div>
          number_prop
                    <span
                      class="pl-1"
                    >
                      :
                      <c-ellipsis-stub
                        class="pl-1 d-inline-block text--secondary text-body-1 pre-wrap"
                        text="1"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="v-treeview-node__append"
                >
                  <div
                    bottom=""
                    class="v-menu"
                    left=""
                    offset-y=""
                  >
                    <button
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      type="button"
                    >
                      <span
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          content_copy
                        </i>
                      </span>
                    </button>
                    <span
                      class="v-tooltip v-tooltip--left"
                    >
                      <!---->
                    </span>
                    <div
                      class="v-list v-sheet theme--light v-list--dense"
                      role="list"
                    >
                      <div
                        class="v-list-item v-list-item--link theme--light"
                        role="listitem"
                        tabindex="0"
                      >
                        <div
                          class="v-avatar v-list-item__avatar"
                          style="height: 40px; min-width: 40px; width: 40px;"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate material-icons theme--light"
                          >
                            content_copy
                          </i>
                        </div>
                        <div
                          class="v-list-item__title"
                        >
                          Copy path to clipboard
                        </div>
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-expanded="true"
            class="v-treeview-node v-treeview-node--leaf"
          >
            <div
              class="v-treeview-node__root"
            >
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__prepend"
                />
                <div
                  class="v-treeview-node__label"
                >
                  <div>
          string_prop
                    <span
                      class="pl-1"
                    >
                      :
                      <c-ellipsis-stub
                        class="pl-1 d-inline-block text--secondary text-body-1 pre-wrap"
                        text="string"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="v-treeview-node__append"
                >
                  <div
                    bottom=""
                    class="v-menu"
                    left=""
                    offset-y=""
                  >
                    <button
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      type="button"
                    >
                      <span
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          content_copy
                        </i>
                      </span>
                    </button>
                    <span
                      class="v-tooltip v-tooltip--left"
                    >
                      <!---->
                    </span>
                    <div
                      class="v-list v-sheet theme--light v-list--dense"
                      role="list"
                    >
                      <div
                        class="v-list-item v-list-item--link theme--light"
                        role="listitem"
                        tabindex="0"
                      >
                        <div
                          class="v-avatar v-list-item__avatar"
                          style="height: 40px; min-width: 40px; width: 40px;"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate material-icons theme--light"
                          >
                            content_copy
                          </i>
                        </div>
                        <div
                          class="v-list-item__title"
                        >
                          Copy path to clipboard
                        </div>
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-expanded="true"
            class="v-treeview-node v-treeview-node--leaf"
          >
            <div
              class="v-treeview-node__root"
            >
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__prepend"
                />
                <div
                  class="v-treeview-node__label"
                >
                  <div>
          bool_prop
                    <span
                      class="pl-1"
                    >
                      :
                      <c-ellipsis-stub
                        class="pl-1 d-inline-block text--secondary text-body-1 pre-wrap"
                        text="false"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="v-treeview-node__append"
                >
                  <div
                    bottom=""
                    class="v-menu"
                    left=""
                    offset-y=""
                  >
                    <button
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      type="button"
                    >
                      <span
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          content_copy
                        </i>
                      </span>
                    </button>
                    <span
                      class="v-tooltip v-tooltip--left"
                    >
                      <!---->
                    </span>
                    <div
                      class="v-list v-sheet theme--light v-list--dense"
                      role="list"
                    >
                      <div
                        class="v-list-item v-list-item--link theme--light"
                        role="listitem"
                        tabindex="0"
                      >
                        <div
                          class="v-avatar v-list-item__avatar"
                          style="height: 40px; min-width: 40px; width: 40px;"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate material-icons theme--light"
                          >
                            content_copy
                          </i>
                        </div>
                        <div
                          class="v-list-item__title"
                        >
                          Copy path to clipboard
                        </div>
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-expanded="true"
            class="v-treeview-node v-treeview-node--leaf"
          >
            <div
              class="v-treeview-node__root"
            >
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__prepend"
                />
                <div
                  class="v-treeview-node__label"
                >
                  <div>
          null_prop
                    <span
                      class="pl-1"
                    >
                      :
                      <c-ellipsis-stub
                        class="pl-1 d-inline-block text--secondary text-body-1 pre-wrap"
                        text="null"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="v-treeview-node__append"
                >
                  <div
                    bottom=""
                    class="v-menu"
                    left=""
                    offset-y=""
                  >
                    <button
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      type="button"
                    >
                      <span
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          content_copy
                        </i>
                      </span>
                    </button>
                    <span
                      class="v-tooltip v-tooltip--left"
                    >
                      <!---->
                    </span>
                    <div
                      class="v-list v-sheet theme--light v-list--dense"
                      role="list"
                    >
                      <div
                        class="v-list-item v-list-item--link theme--light"
                        role="listitem"
                        tabindex="0"
                      >
                        <div
                          class="v-avatar v-list-item__avatar"
                          style="height: 40px; min-width: 40px; width: 40px;"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate material-icons theme--light"
                          >
                            content_copy
                          </i>
                        </div>
                        <div
                          class="v-list-item__title"
                        >
                          Copy path to clipboard
                        </div>
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-expanded="true"
            class="v-treeview-node v-treeview-node--leaf"
          >
            <div
              class="v-treeview-node__root"
            >
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__level"
              />
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__prepend"
                />
                <div
                  class="v-treeview-node__label"
                >
                  <div>
          undefined_prop
                    <span
                      class="pl-1"
                    >
                      :
                      <c-ellipsis-stub
                        class="pl-1 d-inline-block text--secondary text-body-1 pre-wrap"
                        text="undefined"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="v-treeview-node__append"
                >
                  <div
                    bottom=""
                    class="v-menu"
                    left=""
                    offset-y=""
                  >
                    <button
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      type="button"
                    >
                      <span
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          content_copy
                        </i>
                      </span>
                    </button>
                    <span
                      class="v-tooltip v-tooltip--left"
                    >
                      <!---->
                    </span>
                    <div
                      class="v-list v-sheet theme--light v-list--dense"
                      role="list"
                    >
                      <div
                        class="v-list-item v-list-item--link theme--light"
                        role="listitem"
                        tabindex="0"
                      >
                        <div
                          class="v-avatar v-list-item__avatar"
                          style="height: 40px; min-width: 40px; width: 40px;"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate material-icons theme--light"
                          >
                            content_copy
                          </i>
                        </div>
                        <div
                          class="v-list-item__title"
                        >
                          Copy path to clipboard
                        </div>
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-expanded="true"
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <div
                class="v-treeview-node__level"
              />
              <button
                class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
                type="button"
              >
                arrow_drop_down
              </button>
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__prepend"
                >
                  <div
                    class="text-caption font-italic"
                  >
          (Array)
                  </div>
                </div>
                <div
                  class="v-treeview-node__label"
                >
                  <div>
          array_prop
                    <!---->
                  </div>
                </div>
                <div
                  class="v-treeview-node__append"
                >
                  <div
                    bottom=""
                    class="v-menu"
                    left=""
                    offset-y=""
                  >
                    <button
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      type="button"
                    >
                      <span
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          save_alt
                        </i>
                      </span>
                    </button>
                    <span
                      class="v-tooltip v-tooltip--left"
                    >
                      <!---->
                    </span>
                    <div
                      class="v-list v-sheet theme--light v-list--dense"
                      role="list"
                    >
                      <div
                        class="v-list-item v-list-item--link theme--light"
                        role="listitem"
                        tabindex="0"
                      >
                        <div
                          class="v-avatar v-list-item__avatar"
                          style="height: 40px; min-width: 40px; width: 40px;"
                        >
                          <span
                            aria-hidden="true"
                            class="v-icon notranslate theme--light"
                            style="font-size: 24px; height: 24px; width: 24px;"
                          >
                            <svg
                              class="v-icon__component theme--light"
                              fill="currentColor"
                              style="font-size: 24px; height: 24px; width: 24px;"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="v-list-item__title"
                        >
                          Export to JSON
                        </div>
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="v-treeview-node__children"
            >
              <div
                aria-expanded="true"
                class="v-treeview-node"
              >
                <div
                  class="v-treeview-node__root"
                >
                  <div
                    class="v-treeview-node__level"
                  />
                  <div
                    class="v-treeview-node__level"
                  />
                  <button
                    class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
                    type="button"
                  >
                    arrow_drop_down
                  </button>
                  <div
                    class="v-treeview-node__content"
                  >
                    <div
                      class="v-treeview-node__prepend"
                    />
                    <div
                      class="v-treeview-node__label"
                    >
                      <div>
          0
                        <!---->
                      </div>
                    </div>
                    <div
                      class="v-treeview-node__append"
                    >
                      <div
                        bottom=""
                        class="v-menu"
                        left=""
                        offset-y=""
                      >
                        <button
                          class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                          type="button"
                        >
                          <span
                            class="v-btn__content"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate material-icons theme--light"
                            >
                              save_alt
                            </i>
                          </span>
                        </button>
                        <span
                          class="v-tooltip v-tooltip--left"
                        >
                          <!---->
                        </span>
                        <div
                          class="v-list v-sheet theme--light v-list--dense"
                          role="list"
                        >
                          <div
                            class="v-list-item v-list-item--link theme--light"
                            role="listitem"
                            tabindex="0"
                          >
                            <div
                              class="v-avatar v-list-item__avatar"
                              style="height: 40px; min-width: 40px; width: 40px;"
                            >
                              <span
                                aria-hidden="true"
                                class="v-icon notranslate theme--light"
                                style="font-size: 24px; height: 24px; width: 24px;"
                              >
                                <svg
                                  class="v-icon__component theme--light"
                                  fill="currentColor"
                                  style="font-size: 24px; height: 24px; width: 24px;"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="v-list-item__title"
                            >
                              Export to JSON
                            </div>
                          </div>
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-treeview-node__children"
                >
                  <div
                    aria-expanded="true"
                    class="v-treeview-node"
                  >
                    <div
                      class="v-treeview-node__root"
                    >
                      <div
                        class="v-treeview-node__level"
                      />
                      <div
                        class="v-treeview-node__level"
                      />
                      <div
                        class="v-treeview-node__level"
                      />
                      <button
                        class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
                        type="button"
                      >
                        arrow_drop_down
                      </button>
                      <div
                        class="v-treeview-node__content"
                      >
                        <div
                          class="v-treeview-node__prepend"
                        />
                        <div
                          class="v-treeview-node__label"
                        >
                          <div>
          obj_prop
                            <!---->
                          </div>
                        </div>
                        <div
                          class="v-treeview-node__append"
                        >
                          <div
                            bottom=""
                            class="v-menu"
                            left=""
                            offset-y=""
                          >
                            <button
                              class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                              type="button"
                            >
                              <span
                                class="v-btn__content"
                              >
                                <i
                                  aria-hidden="true"
                                  class="v-icon notranslate material-icons theme--light"
                                >
                                  save_alt
                                </i>
                              </span>
                            </button>
                            <span
                              class="v-tooltip v-tooltip--left"
                            >
                              <!---->
                            </span>
                            <div
                              class="v-list v-sheet theme--light v-list--dense"
                              role="list"
                            >
                              <div
                                class="v-list-item v-list-item--link theme--light"
                                role="listitem"
                                tabindex="0"
                              >
                                <div
                                  class="v-avatar v-list-item__avatar"
                                  style="height: 40px; min-width: 40px; width: 40px;"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="v-icon notranslate theme--light"
                                    style="font-size: 24px; height: 24px; width: 24px;"
                                  >
                                    <svg
                                      class="v-icon__component theme--light"
                                      fill="currentColor"
                                      style="font-size: 24px; height: 24px; width: 24px;"
                                      viewBox="0 0 24 24"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                                <div
                                  class="v-list-item__title"
                                >
                                  Export to JSON
                                </div>
                              </div>
                              <!---->
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-treeview-node__children"
                    >
                      <div
                        aria-expanded="true"
                        class="v-treeview-node v-treeview-node--leaf"
                      >
                        <div
                          class="v-treeview-node__root"
                        >
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__content"
                          >
                            <div
                              class="v-treeview-node__prepend"
                            />
                            <div
                              class="v-treeview-node__label"
                            >
                              <div>
          deep_prop
                                <span
                                  class="pl-1"
                                >
                                  :
                                  <c-ellipsis-stub
                                    class="pl-1 d-inline-block text--secondary text-body-1 pre-wrap"
                                    text="53"
                                  />
                                </span>
                              </div>
                            </div>
                            <div
                              class="v-treeview-node__append"
                            >
                              <div
                                bottom=""
                                class="v-menu"
                                left=""
                                offset-y=""
                              >
                                <button
                                  class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                                  type="button"
                                >
                                  <span
                                    class="v-btn__content"
                                  >
                                    <i
                                      aria-hidden="true"
                                      class="v-icon notranslate material-icons theme--light"
                                    >
                                      content_copy
                                    </i>
                                  </span>
                                </button>
                                <span
                                  class="v-tooltip v-tooltip--left"
                                >
                                  <!---->
                                </span>
                                <div
                                  class="v-list v-sheet theme--light v-list--dense"
                                  role="list"
                                >
                                  <div
                                    class="v-list-item v-list-item--link theme--light"
                                    role="listitem"
                                    tabindex="0"
                                  >
                                    <div
                                      class="v-avatar v-list-item__avatar"
                                      style="height: 40px; min-width: 40px; width: 40px;"
                                    >
                                      <i
                                        aria-hidden="true"
                                        class="v-icon notranslate material-icons theme--light"
                                      >
                                        content_copy
                                      </i>
                                    </div>
                                    <div
                                      class="v-list-item__title"
                                    >
                                      Copy path to clipboard
                                    </div>
                                  </div>
                                  <!---->
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-expanded="true"
                        class="v-treeview-node v-treeview-node--leaf"
                      >
                        <div
                          class="v-treeview-node__root"
                        >
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__level"
                          />
                          <div
                            class="v-treeview-node__content"
                          >
                            <div
                              class="v-treeview-node__prepend"
                            />
                            <div
                              class="v-treeview-node__label"
                            >
                              <div>
          empty_obj
                                <span
                                  class="pl-1"
                                >
                                  :
                                  <div
                                    class="pl-1 d-inline-block text--secondary text-body-1 font-italic"
                                  >
              Empty object
                                  </div>
                                </span>
                              </div>
                            </div>
                            <div
                              class="v-treeview-node__append"
                            >
                              <div
                                bottom=""
                                class="v-menu"
                                left=""
                                offset-y=""
                              >
                                <button
                                  class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                                  type="button"
                                >
                                  <span
                                    class="v-btn__content"
                                  >
                                    <i
                                      aria-hidden="true"
                                      class="v-icon notranslate material-icons theme--light"
                                    >
                                      save_alt
                                    </i>
                                  </span>
                                </button>
                                <span
                                  class="v-tooltip v-tooltip--left"
                                >
                                  <!---->
                                </span>
                                <div
                                  class="v-list v-sheet theme--light v-list--dense"
                                  role="list"
                                >
                                  <div
                                    class="v-list-item v-list-item--link theme--light"
                                    role="listitem"
                                    tabindex="0"
                                  >
                                    <div
                                      class="v-avatar v-list-item__avatar"
                                      style="height: 40px; min-width: 40px; width: 40px;"
                                    >
                                      <span
                                        aria-hidden="true"
                                        class="v-icon notranslate theme--light"
                                        style="font-size: 24px; height: 24px; width: 24px;"
                                      >
                                        <svg
                                          class="v-icon__component theme--light"
                                          fill="currentColor"
                                          style="font-size: 24px; height: 24px; width: 24px;"
                                          viewBox="0 0 24 24"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                                          />
                                        </svg>
                                      </span>
                                    </div>
                                    <div
                                      class="v-list-item__title"
                                    >
                                      Export to JSON
                                    </div>
                                  </div>
                                  <!---->
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="v-treeview-node__children"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-expanded="true"
                class="v-treeview-node v-treeview-node--leaf"
              >
                <div
                  class="v-treeview-node__root"
                >
                  <div
                    class="v-treeview-node__level"
                  />
                  <div
                    class="v-treeview-node__level"
                  />
                  <div
                    class="v-treeview-node__level"
                  />
                  <div
                    class="v-treeview-node__content"
                  >
                    <div
                      class="v-treeview-node__prepend"
                    >
                      <div
                        class="text-caption font-italic"
                      >
          (Array)
                      </div>
                    </div>
                    <div
                      class="v-treeview-node__label"
                    >
                      <div>
          1
                        <span
                          class="pl-1"
                        >
                          :
                          <div
                            class="pl-1 d-inline-block text--secondary text-body-1 font-italic"
                          >
              Empty object
                          </div>
                        </span>
                      </div>
                    </div>
                    <div
                      class="v-treeview-node__append"
                    >
                      <div
                        bottom=""
                        class="v-menu"
                        left=""
                        offset-y=""
                      >
                        <button
                          class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                          type="button"
                        >
                          <span
                            class="v-btn__content"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate material-icons theme--light"
                            >
                              save_alt
                            </i>
                          </span>
                        </button>
                        <span
                          class="v-tooltip v-tooltip--left"
                        >
                          <!---->
                        </span>
                        <div
                          class="v-list v-sheet theme--light v-list--dense"
                          role="list"
                        >
                          <div
                            class="v-list-item v-list-item--link theme--light"
                            role="listitem"
                            tabindex="0"
                          >
                            <div
                              class="v-avatar v-list-item__avatar"
                              style="height: 40px; min-width: 40px; width: 40px;"
                            >
                              <span
                                aria-hidden="true"
                                class="v-icon notranslate theme--light"
                                style="font-size: 24px; height: 24px; width: 24px;"
                              >
                                <svg
                                  class="v-icon__component theme--light"
                                  fill="currentColor"
                                  style="font-size: 24px; height: 24px; width: 24px;"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="v-list-item__title"
                            >
                              Export to JSON
                            </div>
                          </div>
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-treeview-node__children"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="actions"
  />
</div>
`;

exports[`variables-help Renders \`variables-help\` with empty modal 1`] = `
<div
  class="modal-wrapper"
  close=""
>
  <div
    class="title"
  >
    <span>
      Variables
    </span>
  </div>
  <div
    class="text"
  >
    <!---->
    <div
      class="v-treeview theme--light"
    />
  </div>
  <div
    class="actions"
  />
</div>
`;

exports[`variables-help Renders \`variables-help\` with original flag 1`] = `
<div
  class="modal-wrapper"
  close=""
>
  <div
    class="title"
  >
    <span>
      Variables
    </span>
  </div>
  <div
    class="text"
  >
    <!---->
    <div
      class="v-treeview theme--light"
    >
      <div
        aria-expanded="false"
        class="v-treeview-node v-treeview-node--leaf"
      >
        <div
          class="v-treeview-node__root"
        >
          <div
            class="v-treeview-node__level"
          />
          <div
            class="v-treeview-node__content"
          >
            <div
              class="v-treeview-node__prepend"
            />
            <div
              class="v-treeview-node__label"
            >
              <div>
          alarm
                <span
                  class="pl-1"
                >
                  :
                  <div
                    class="pl-1 d-inline-block text--secondary text-body-1 font-italic"
                  >
              Empty object
                  </div>
                </span>
              </div>
            </div>
            <div
              class="v-treeview-node__append"
            >
              <div
                bottom=""
                class="v-menu"
                left=""
                offset-y=""
              >
                <span
                  class="v-tooltip v-tooltip--left"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        save_alt
                      </i>
                    </span>
                  </button>
                </span>
                <div
                  class="v-list v-sheet theme--light v-list--dense"
                  role="list"
                >
                  <div
                    class="v-list-item v-list-item--link theme--light"
                    role="listitem"
                    tabindex="0"
                  >
                    <div
                      class="v-avatar v-list-item__avatar"
                      style="height: 40px; min-width: 40px; width: 40px;"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                        style="font-size: 24px; height: 24px; width: 24px;"
                      >
                        <svg
                          class="v-icon__component theme--light"
                          fill="currentColor"
                          style="font-size: 24px; height: 24px; width: 24px;"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="v-list-item__title"
                    >
                      Export to JSON
                    </div>
                  </div>
                  <div
                    class="v-list-item v-list-item--link theme--light"
                    role="listitem"
                    tabindex="0"
                  >
                    <div
                      class="v-avatar v-list-item__avatar"
                      style="height: 40px; min-width: 40px; width: 40px;"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                        style="font-size: 24px; height: 24px; width: 24px;"
                      >
                        <svg
                          class="v-icon__component theme--light"
                          fill="currentColor"
                          style="font-size: 24px; height: 24px; width: 24px;"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.98826 12.2974C6.98826 11.6511 6.53951 11.2654 5.74757 11.2654C5.42452 11.2654 5.20565 11.2965 5.09088 11.3278V13.403C5.22657 13.4338 5.39336 13.4444 5.62212 13.4444C6.46704 13.4444 6.98826 13.017 6.98826 12.2974Z"
                          />
                          <path
                            d="M11.8899 11.2862C11.535 11.2862 11.3062 11.3175 11.1702 11.3487V15.9467C11.3059 15.9784 11.5249 15.9784 11.7231 15.9784C13.1618 15.9885 14.1002 15.1965 14.1002 13.5177C14.1107 12.0574 13.2555 11.2862 11.8899 11.2862Z"
                          />
                          <path
                            d="M21.2822 8.58469H20.7059V5.80404C20.7059 5.7867 20.7031 5.76923 20.7008 5.75167C20.6999 5.64125 20.6648 5.5328 20.5892 5.44687L15.9619 0.160958C15.9605 0.159608 15.9591 0.159128 15.9582 0.157647C15.9306 0.126841 15.8984 0.10122 15.8644 0.0790412C15.8544 0.0722874 15.8442 0.066623 15.8337 0.0607842C15.8042 0.0447058 15.773 0.0313725 15.7408 0.0217429C15.7321 0.0193028 15.7243 0.0157298 15.7155 0.013464C15.6806 0.00518517 15.6443 0 15.6075 0H4.23531C3.71601 0 3.29413 0.422352 3.29413 0.941218V8.58447H2.71797C1.97509 8.58447 1.37274 9.18656 1.37274 9.9297V16.9251C1.37274 17.6677 1.97509 18.2702 2.71797 18.2702H3.29418V23.0588C3.29418 23.5776 3.71605 24 4.23535 24H19.7647C20.2836 24 20.7059 23.5776 20.7059 23.0588V18.2702H21.2822C22.0249 18.2702 22.6273 17.6677 22.6273 16.9251V9.92992C22.6273 9.18682 22.0248 8.58469 21.2822 8.58469ZM4.23531 0.941393H15.1369V5.75676C15.1369 6.01676 15.3479 6.22735 15.6075 6.22735H19.7647V8.58499H4.23531V0.941393ZM15.7891 13.465C15.7891 14.8104 15.2992 15.738 14.6204 16.3118C13.881 16.9269 12.7546 17.2187 11.3788 17.2187C10.5553 17.2187 9.97151 17.1665 9.57482 17.1146V10.212C10.1587 10.1183 10.9203 10.0662 11.7231 10.0662C13.057 10.0662 13.9226 10.3062 14.6006 10.8168C15.3302 11.359 15.7891 12.2242 15.7891 13.465ZM3.51635 17.1459V10.212C4.00616 10.129 4.69465 10.0662 5.66432 10.0662C6.64432 10.0662 7.34306 10.2539 7.81208 10.6295C8.26053 10.9838 8.56218 11.5678 8.56218 12.256C8.56218 12.9444 8.33343 13.5282 7.91604 13.9242C7.37391 14.4352 6.57116 14.6647 5.63252 14.6647C5.42432 14.6647 5.236 14.6541 5.09069 14.6332V17.1461H3.51635V17.1459ZM19.7647 22.804H4.23531V18.2702H19.7647V22.804H19.7647ZM21.1284 11.4216H18.4274V13.0273H20.9508V14.3203H18.4274V17.1459H16.8329V10.1183H21.1284V11.4216Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="v-list-item__title"
                    >
                      Export to PDF
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-expanded="false"
        class="v-treeview-node"
      >
        <div
          class="v-treeview-node__root"
        >
          <button
            class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light"
            type="button"
          >
            arrow_drop_down
          </button>
          <div
            class="v-treeview-node__content"
          >
            <div
              class="v-treeview-node__prepend"
            />
            <div
              class="v-treeview-node__label"
            >
              <div>
          test2
                <!---->
              </div>
            </div>
            <div
              class="v-treeview-node__append"
            >
              <div
                bottom=""
                class="v-menu"
                left=""
                offset-y=""
              >
                <span
                  class="v-tooltip v-tooltip--left"
                >
                  <!---->
                  <button
                    class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        save_alt
                      </i>
                    </span>
                  </button>
                </span>
                <div
                  class="v-list v-sheet theme--light v-list--dense"
                  role="list"
                >
                  <div
                    class="v-list-item v-list-item--link theme--light"
                    role="listitem"
                    tabindex="0"
                  >
                    <div
                      class="v-avatar v-list-item__avatar"
                      style="height: 40px; min-width: 40px; width: 40px;"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                        style="font-size: 24px; height: 24px; width: 24px;"
                      >
                        <svg
                          class="v-icon__component theme--light"
                          fill="currentColor"
                          style="font-size: 24px; height: 24px; width: 24px;"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.0719 2.51015H6.24846C6.38206 2.51015 6.49221 2.62031 6.49221 2.7539V3.65625C6.49221 3.78984 6.38206 3.9 6.24846 3.9H5.17502C5.04143 3.9 4.86096 4.00781 4.86096 4.14375L4.83752 9.92344C4.80706 10.7484 4.24924 12.0328 3.46409 12.0656C4.00784 12.0422 4.86096 12.9914 4.86096 14.1609L4.83752 19.8422C4.83752 19.9781 4.94768 20.3016 5.08596 20.3016H6.24143C6.37971 20.3016 6.49456 20.4609 6.49456 20.6016V21.3258C6.49456 21.4641 6.38206 21.5789 6.24143 21.5789H5.07424C4.31487 21.293 3.65393 20.625 3.65393 19.4602V15.218C3.65393 14.0484 3.01877 13.0992 2.23362 13.0992H1.80706C1.64768 13.0992 1.52112 12.9703 1.52112 12.8133V11.2687C1.52112 11.1094 1.65002 10.9828 1.80706 10.9828H2.23127C3.01643 10.9828 3.65159 10.0336 3.65159 8.86406V4.62656C3.65159 3.45703 4.28674 2.51015 5.0719 2.51015ZM18.9516 2.51015C19.7367 2.51015 20.3719 3.45703 20.3719 4.62656V8.86406C20.3719 10.0336 21.0071 10.9828 21.7922 10.9828H22.2164C22.3735 10.9828 22.5024 11.1094 22.5024 11.2687V12.8133C22.5024 12.9703 22.3758 13.0992 22.2164 13.0992H21.7899C21.0047 13.0992 20.3696 14.0484 20.3696 15.218V19.4602C20.3696 20.625 19.7086 21.293 18.9492 21.5789H17.7821C17.6414 21.5789 17.5289 21.4641 17.5289 21.3258V20.6016C17.5289 20.4609 17.6438 20.3016 17.7821 20.3016H18.9375C19.0758 20.3016 19.186 19.9781 19.186 19.8422L19.1625 14.1609C19.1625 12.9914 20.0156 12.0422 20.5594 12.0656C19.7742 12.0328 19.2164 10.7484 19.186 9.92344L19.1625 4.14375C19.1625 4.00781 18.9821 3.9 18.8485 3.9H17.775C17.6414 3.9 17.5313 3.78984 17.5313 3.65625V2.7539C17.5313 2.62031 17.6414 2.51015 17.775 2.51015H18.9516ZM11.9156 15.6516C12.3094 15.6516 12.6281 15.9703 12.6281 16.3641C12.6281 16.7578 12.3094 17.0766 11.9156 17.0766C11.5219 17.0766 11.2031 16.7578 11.2031 16.3641C11.2031 15.9703 11.5219 15.6516 11.9156 15.6516ZM9.06565 15.6516C9.4594 15.6516 9.77815 15.9703 9.77815 16.3641C9.77815 16.7578 9.4594 17.0766 9.06565 17.0766C8.6719 17.0766 8.35315 16.7578 8.35315 16.3641C8.35315 15.9703 8.6719 15.6516 9.06565 15.6516ZM14.7656 15.6516C15.1594 15.6516 15.4781 15.9703 15.4781 16.3641C15.4781 16.7578 15.1594 17.0766 14.7656 17.0766C14.3719 17.0766 14.0531 16.7578 14.0531 16.3641C14.0531 15.9703 14.3719 15.6516 14.7656 15.6516Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="v-list-item__title"
                    >
                      Export to JSON
                    </div>
                  </div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="actions"
  />
</div>
`;
